Bug fix on building wordgrams